# todo

./: .gitignore  Procfile  pyproject.toml  requirements.txt  runtime.txt
django_project/: settings.py  urls.py
todos/: admin.py  tests.py  urls.py
todos/migrations/: 0001_initial.py
